deploy/k8s/overlays/ec2/redirect-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  labels:
    app.kubernetes.io/name: go-order-service
    app.kubernetes.io/component: networking
    app.kubernetes.io/part-of: go-order-service
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-http
  labels:
    app.kubernetes.io/name: go-order-service
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: go-order-service
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: order-service-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: api.go-order-service.hieutrinh02.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  name: http
